shutdown: Fix r327476 by adding init

Initialize maybe_today. While here sort.

PR:				32411
Additionally reported by:	rgrimes, ian


git-svn-id: svn+ssh://svn.freebsd.org/base/head@327488 ccf9f872-aa2e-dd11-9fc8-001c23d0bc1f